vpc.tf
# one vpc to hold them all, and in the cloud bind them
resource "aws_vpc" "multivpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "multivpc"
    Project = "Multi"
  }
}

# let vpc talk to the internet - create internet gateway 
resource "aws_internet_gateway" "multigw" {
  vpc_id = "${aws_vpc.multivpc.id}"
  tags = {
    Name = "multigw"
    Project = "Multi"
  }
}

# create one public subnet per availability zone
resource "aws_subnet" "publicsubnets" {
  availability_zone       = "${element(var.azs,count.index)}"
  cidr_block              = "${element(var.public_subnets_cidr,count.index)}"
  count                   = "${length(var.azs)}"
  map_public_ip_on_launch = true
  vpc_id                  = "${aws_vpc.multivpc.id}"
  tags = {
    Name = "publicsub-${count.index}"
    Project = "Multi"
  }
}

# create one private subnet per availability zone
resource "aws_subnet" "privatesubnets" {
  availability_zone       = "${element(var.azs,count.index)}"
  cidr_block              = "${element(var.private_subnets_cidr,count.index)}"
  count                   = "${length(var.azs)}"
  map_public_ip_on_launch = false
  vpc_id                  = "${aws_vpc.multivpc.id}"
  tags = {
    Name = "privatesub-${count.index}"
  }
}

# dynamic list of the public subnets created above
data "aws_subnet_ids" "publics" {








  depends_on = [aws_subnet.publicsubnets]
  vpc_id = "${aws_vpc.multivpc.id}"
}

# dynamic list of the private subnets created above
data "aws_subnet_ids" "privates" {
  depends_on = [aws_subnet.privatesubnets]
  vpc_id = "${aws_vpc.multivpc.id}"
}

# main route table for vpc and subnets
resource "aws_route_table" "publicrt" {
  vpc_id = "${aws_vpc.multivpc.id}"
  tags = {
    Name = "public_rt"
    Project = "Multi"
  }
}

# add public gateway to the route table
resource "aws_route" "publicgw" {
  gateway_id = "${aws_internet_gateway.multigw.id}"
  destination_cidr_block = "0.0.0.0/0"
  route_table_id = "${aws_route_table.publicrt.id}"
}

# associate route table with vpc
resource "aws_main_route_table_association" "publicas" {
  vpc_id = "${aws_vpc.multivpc.id}"
  route_table_id = "${aws_route_table.publicrt.id}"
}

# and associate route table with each subnet
resource "aws_route_table_association" "routetables" {
  count = "${length(var.azs)}"
  subnet_id      = "${element(tolist(data.aws_subnet_ids.publics.ids), count.index)}"
  route_table_id = "${aws_route_table.publicrt.id}"
}

# create elastic IP (EIP) to assign it the NAT Gateway 
resource "aws_eip" "eip" {
  count    = "${length(var.azs)}"
  vpc      = true
  depends_on = [aws_internet_gateway.multigw]
}

# create NAT Gateways
# make sure to create the nat in a internet-facing subnet (public subnet)
resource "aws_nat_gateway" "natgw" {
    count    = "${length(var.azs)}"
    allocation_id = "${element(aws_eip.eip.*.id, count.index)}"
    subnet_id = "${element(aws_subnet.publicsubnets.*.id, count.index)}"
    depends_on = [aws_internet_gateway.multigw]
}

# for each of the private ranges, create a "private" route table.
resource "aws_route_table" "private_rt" {
  vpc_id = "${aws_vpc.multivpc.id}"
  count ="${length(var.azs)}" 
  tags = { 
    Name = "privatert_${count.index}"
    Project = "Multi"
  }
}

# add a nat gateway to each private subnet's route table
resource "aws_route" "private_nat_gateway_route" {
  count = "${length(var.azs)}"
  route_table_id = "${element(aws_route_table.private_rt.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  depends_on = [aws_route_table.private_rt]
  nat_gateway_id = "${element(aws_nat_gateway.natgw.*.id, count.index)}"
}
